# nodobra

./: package-lock.json  package.json
src/: App.js  Container.js  ItemTypes.js  Node.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  node.rs  serialization.rs
src/components/: Board.js
src/components/nodes/: Average.js  Field.js  Head.js  LoadData.js  Multiply.js  Node.js  SourcePicker.js  Sum.js  Tail.js
